<resources>
    <string name="app_name">SmartProtecter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_login">SmartProtecter</string>


    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">学号或者学工号</string>
    <string name="login_password_hint">密码</string>

    <string name="publishment_title">发布事故</string>
    <string name="publishment_label_district">校区</string>
    <string name="publishment_label_building">楼宇</string>
    <string name="publishment_label_floor">楼层</string>
    <string name="publishment_label_room">房间</string>
    <string name="publishment_label_accidentType">事故类型</string>
    <string name="publishment_label_description">描述</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
